@@ -9,6 +9,7 @@ Release 0.9
 - Allow enabling the Tracemonkey JIT mode from C++ (#140).
 - Add == for flusspferd::value (#141).
 - Add push for flusspferd::array (#144).
+- Adapt array::set_element to object::set_property interface (#146).
 
 2009-10-24:
 - Remove support for old Spidermonkey versions.
